// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup Center aligment should render with center alignment styles 1`] = `
.circuit-0 {
  list-style-type: none;
  overflow: hidden;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.circuit-0 > li:not(:last-of-type) {
  margin-bottom: 16px;
}

.circuit-0 > li > * {
  width: 100%;
}

@media (min-width:480px) {
  .circuit-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .circuit-0 > li:not(:last-of-type) {
    margin-bottom: 0;
    margin-right: 16px;
  }
}

<ul
  className="circuit-0 circuit-1"
/>
`;

exports[`ButtonGroup Left aligment should render with left alignment styles 1`] = `
.circuit-0 {
  list-style-type: none;
  overflow: hidden;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.circuit-0 > li:not(:last-of-type) {
  margin-bottom: 16px;
}

.circuit-0 > li > * {
  width: 100%;
}

@media (min-width:480px) {
  .circuit-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .circuit-0 > li:not(:last-of-type) {
    margin-bottom: 0;
    margin-right: 16px;
  }
}

<ul
  className="circuit-0 circuit-1"
/>
`;

exports[`ButtonGroup No margin bottom should render without margin bottom styles 1`] = `
.circuit-0 {
  list-style-type: none;
  overflow: hidden;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.circuit-0 > li:not(:last-of-type) {
  margin-bottom: 16px;
}

.circuit-0 > li > * {
  width: 100%;
}

@media (min-width:480px) {
  .circuit-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .circuit-0 > li:not(:last-of-type) {
    margin-bottom: 0;
    margin-right: 16px;
  }
}

<ul
  className="circuit-0 circuit-1"
/>
`;

exports[`ButtonGroup should render with default styles 1`] = `
.circuit-0 {
  list-style-type: none;
  overflow: hidden;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.circuit-0 > li:not(:last-of-type) {
  margin-bottom: 16px;
}

.circuit-0 > li > * {
  width: 100%;
}

@media (min-width:480px) {
  .circuit-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .circuit-0 > li:not(:last-of-type) {
    margin-bottom: 0;
    margin-right: 16px;
  }
}

<ul
  className="circuit-0 circuit-1"
/>
`;
